[tool.poetry]
name = "cherryconfig"
version = "1.0a"
description = "Declarative config file interaface for python applications"
authors = ["Stefan Sullivan <stefan.sullivan@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
